# algorithms_labs_work_1

./: .gitignore  Algoritm_LR1.cpp  CMakeLists.txt  LR1  LR1.cpp  LR1v1  LR1v1.cpp  README.md
